# detonito

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  LICENSE_MIT  README.md  REUSE.toml  index.html  justfile  solver_tiers_corpus.json
.config/: nextest.toml
.github/workflows/: pages.yml
core/: Cargo.toml
core/benches/: gen_tiers.rs
core/src/: afk.rs  error.rs  lib.rs  solver.rs
core/src/analysis/: constraints.rs  observation.rs
core/src/generator/: mod.rs  random.rs
core/src/solver/: propagation.rs  sat_check.rs
core/tests/: wasm_smoke.rs
detonito_core/: Cargo.toml
detonito_core/benches/: solver_tiers.rs
detonito_core/src/: benchmark_corpus.rs  engine.rs  error.rs  lib.rs  solver.rs  tile.rs  types.rs
detonito_core/src/analysis/: constraints.rs  mod.rs
detonito_core/src/generator/: mod.rs  no_guess.rs  random.rs
detonito_core/src/solver/: propagation.rs  sat_check.rs
detonito_webapp/: Cargo.toml  index.html
detonito_webapp/scss/: _game.scss  _iosevka.scss  _openmoji.scss  _settings.scss
detonito_webapp/scss/theme/: _light.scss
detonito_webapp/src/: game.rs  lib.rs  no_guess_worker.rs  settings.rs  theme.rs  utils.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
scss/: _game.scss  _theme.scss  main.scss
scss/pico_theme/: _dark.scss  _light.scss  _styles.scss  _theme-colors.scss
scss/theme/: _dark.scss  _light.scss
src/: app.rs  game.rs  lib.rs
src/app/: game.rs  mod.rs  settings.rs  theme.rs  utils.rs
src/game/: error.rs  generator.rs  mod.rs  types.rs
src/game/generator/: mod.rs
web/: Cargo.toml  index.html
web/assets/licenses/: third_party.toml
web/assets/openmoji/: manifest.toml
web/scss/: _game.scss  _theme.scss  main.scss
web/scss/theme/: _dark.scss  _light.scss
web/src/: afk.rs  afk_disabled.rs  app.rs  board_input.rs  game.rs  hazard_variant.rs  lib.rs  menu.rs  no_guess_worker.rs  normal.rs  runtime.rs  settings.rs  sprites.rs  theme.rs  utils.rs
worker/: .dev.vars.example  Cargo.toml  package.json  pnpm-lock.yaml  wrangler.toml
worker/scripts/: cloudflare-build.sh
worker/src/: auth.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
