[workspace]
resolver = "3"
members = [
    "core",
    "web",
]

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["すごいジャン <me@sugoijan.dev>"]
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
detonito-core = { path = "core" }
bitflags = { version = "2", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "3"
console_error_panic_hook = "0.1"
console_log = { version = "1", features = ["color", "wasm-bindgen"] }
gloo = "0.11"
js-sys = "0.3"
log = { version = "0.4", features = ["serde"] }
ndarray = { version = "0.17", default-features = false, features = ["serde"] }
rand = { version = "0.10", default-features = false, features = ["serde"] }
rustsat = { version = "0.7", default-features = true }
rustsat-batsat = "0.7"
serde = { version = "1", default-features = false }
serde_json = "1"
thiserror = { version = "2", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-time = "1"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
    "Url",
    "Worker",
    "WorkerOptions",
    "WorkerType",
] }
yew = { version = "0.22", features = ["csr"] }
criterion = { version = "0.8", features = ["html_reports"] }
smallvec = { version = "1", features = ["union", "serde"] }
hashbrown = "0.16"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true

[profile.bench]
# XXX: mostly match the tuning from the release profile
codegen-units = 1
lto = true
