[workspace]
resolver = "3"
members = [
    "core",
    "protocol",
    "web",
    "worker",
    "xtask",
]

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["すごいジャン <me@sugoijan.dev>"]
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
anyhow = "1"
barbed = { version = "0.0", features = ["cloudflare-worker"] }
detonito-core = { path = "core" }
detonito-protocol = { path = "protocol" }
bitflags = { version = "2", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "3"
console_error_panic_hook = "0.1"
console_log = { version = "1", features = ["color", "wasm-bindgen"] }
futures-channel = "0.3"
futures-util = "0.3"
gloo = "0.11"
js-sys = "0.3"
log = { version = "0.4", features = ["serde"] }
ndarray = { version = "0.17", default-features = false, features = ["serde"] }
rand = { version = "0.10", default-features = false, features = ["serde"] }
rustsat = { version = "0.7", default-features = true }
rustsat-batsat = "0.7"
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
serde_json = "1"
thiserror = { version = "2", default-features = false }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-time = "1"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "CssStyleDeclaration",
    "Document",
    "DedicatedWorkerGlobalScope",
    "Element",
    "Event",
    "EventTarget",
    "FocusEvent",
    "History",
    "HtmlAnchorElement",
    "HtmlElement",
    "HtmlInputElement",
    "InputEvent",
    "KeyboardEvent",
    "Location",
    "MessageEvent",
    "MediaQueryList",
    "Node",
    "PointerEvent",
    "Request",
    "RequestCredentials",
    "RequestInit",
    "Response",
    "WebSocket",
    "Url",
    "Window",
    "Worker",
    "WorkerOptions",
    "WorkerType",
] }
worker = "0.7.5"
yew = { version = "0.22", features = ["csr"] }
criterion = { version = "0.8", features = ["html_reports"] }
smallvec = { version = "1", features = ["union", "serde"] }
hashbrown = "0.16"
roxmltree = "0.20"
toml = "1.1"
toml_edit = "0.22"
ttf-parser = "0.25"
xmlwriter = "0.1"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true

[profile.bench]
# XXX: mostly match the tuning from the release profile
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3

# Profile for optimized dependencies in the web app for development
[profile.web-dev]
inherits = "dev"

[profile.web-dev.package.detonito-core]
opt-level = 3
