[package]
name = "detonito-core"
version = "0.1.0"
authors = ["すごいジャン <sugokunaijan@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
ndarray = { version = "0.17", features = ["serde"], default-features = false}
rand = { version = "0.10", features = ["serde"], default-features = false }
thiserror = { version = "2", default-features = false }
log = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"], default-features = false }
serde = { version = "1", default-features = false }
