[package]
name = "detonito-core"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
ndarray.workspace = true
rand.workspace = true
thiserror.workspace = true
log.workspace = true
serde.workspace = true
