[package]
name = "detonito-webapp"
version = "0.1.0"
authors = ["すごいジャン <sugokunaijan@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
detonito-core = { path = "../detonito_core" }
bitflags = { version = "2.6.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"], default-features = false }
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
console_log = { version = "1.0.0", features = ["color", "wasm-bindgen"] }
gloo = "0.11.0"
js-sys = "0.3.72"
log = { version = "0.4.22", features = ["serde"] }
serde = "1.0.215"
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4.45"
yew = { version = "0.21.0", features = ["csr"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
