[package]
name = "detonito-webapp"
version = "0.1.0"
authors = ["すごいジャン <me@sugoijan.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
detonito-core = { path = "../detonito_core" }
bitflags = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"], default-features = false }
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "3"
console_log = { version = "1", features = ["color", "wasm-bindgen"] }
gloo = "0.11"
js-sys = "0.3"
log = { version = "0.4", features = ["serde"] }
serde = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = { version = "0.22", features = ["csr"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
