[package]
name = "detonito-webapp"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
detonito-core.workspace = true
bitflags.workspace = true
chrono.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
console_log.workspace = true
gloo.workspace = true
js-sys.workspace = true
log.workspace = true
ndarray.workspace = true
serde.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
yew.workspace = true

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test.workspace = true
