[package]
name = "detonito-web"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = ["web-default"]
web-default = ["console_error_panic_hook", "afk-runtime"]
web-static = ["console_error_panic_hook"]
afk-runtime = ["dep:detonito-protocol", "dep:wasm-bindgen-futures"]

[dependencies]
detonito-core.workspace = true
detonito-protocol = { workspace = true, optional = true }
bitflags.workspace = true
chrono.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
console_log.workspace = true
gloo.workspace = true
js-sys.workspace = true
log.workspace = true
ndarray.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys.workspace = true
yew.workspace = true

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test.workspace = true
