[package]
name = "xtask"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
roxmltree.workspace = true
toml.workspace = true
ttf-parser.workspace = true
xmlwriter.workspace = true
